edit in deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             sudo -i 
-            cd quiz
+            cd /root/quiz
             docker compose down
             docker compose pull
             docker compose up -d
