--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,8 +50,8 @@ jobs:
         run: |
             echo "$EC2_SSH_KEY" > key.pem
             chmod 600 key.pem
-            ssh-keyscan -H "$EC2_HOST" >> ~/.ssh/known_hosts
-            ssh -i key.pem -o StrictHostKeyChecking=no "$EC2_USER@$EC2_HOST" << EOF
+            
+            ssh -i key.pem "$EC2_USER@$EC2_HOST" 
             echo "Connected to EC2"    
             ls
             sudo -i
